# src/app/services/models.ts
@@ -1,6 +1,10 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { AlertsRequest } from './models/alerts-request';
+export type { AlertsResponse } from './models/alerts-response';
 export type { AuthenticationRequest } from './models/authentication-request';
 export type { AuthenticationResponse } from './models/authentication-response';
 export type { RegistrationRequest } from './models/registration-request';
+export type { StockPriceRequest } from './models/stock-price-request';
+export type { StockPriceResponse } from './models/stock-price-response';
