# src/app/services/models/alerts-request.ts
@@ -1,0 +1,9 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface AlertsRequest {
+  alertType: 'DIP' | 'RISE';
+  notificationChannel: 'EMAIL' | 'WHATSAPP' | 'BOTH';
+  threshold: number;
+  ticker: string;
+}
